Add support to the line graph for negative values in addition to positive values. This makes use of the new kICLMinimumColour and kICLMinimumValue fields Update the project for iOS 7 compatibility Fix bug that caused non-remote changes to be treated as remote changes.

--- a/OSXCoreLibrarySampleApp/OSXCoreLibrarySampleApp/Info.plist
+++ b/OSXCoreLibrarySampleApp/OSXCoreLibrarySampleApp/Info.plist
@@ -28,6 +28,8 @@
 	<string>Copyright © 2015 Injaia. All rights reserved.</string>
 	<key>NSMainStoryboardFile</key>
 	<string>Main</string>
+	<key>NSUbiquitousDisplaySet</key>
+	<string>com.injaia.iOSCoreLibrary.ExampleSet</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 </dict>
